[workspace]
resolver = "2"
members = [
    "sekistov", 
]

[workspace.dependencies]
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3"}
tokio = { version = "1" }
dotenv = "0.15"
clap = { version = "4.0" }
common_macros = { path = "common_macros" }
arrange_millis = { path = "arrange_millis" }
op_mode = { path = "op_mode" }
paste = "1"
lazy_static = "1"
config = "0.15"
serde = { version = "1", default-features = false }
regex = "1"
serde_json = "1"
strum = { version = "0.26" }
futures = { version = "0.3" }
tokio-stream = "0.1"
uuid = "1.8"
maud = "0.26"
serde_yml = "0.0.12"
axum = { version = "0.8" }
tower-http = { version = "0.6", features = ["fs", "trace"] }
blake2 = "0.10"
base64 = "0.22"
