#cargo-features = ["edition2021"]

[package]
name = "arrange_millis"
version = "0.1.0"
authors = ["Yury Bikuzin <yury.bikuzin@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
log = "0.4"

[dev-dependencies]
pretty_env_logger = "0.5"
tokio = { version = "1", features = ["full"] }
