#cargo-features = ["edition2021"]

[package]
edition = "2021"
authors = ["Yury Bikuzin <yury.bikuzin@gmail.com>"]
name = "common_macros"
version = "0.18.0"
# 0.18.0: replaced pretty_env_logger with tracing
# 0.17.5: renamed back to common_macros; added `macro_rules! get_base_dir_and_args`
# 0.17.4: improved macros common_macros2::r#impl!(FromStr for УровеньИгрока; strum): added lowercase case
# 0.17.3: improved macros common_macros2::r#impl!(FromStr for УровеньИгрока; strum): ('С', 'C') => true
# 0.17.2: added support for settings!(); added #[derive(serde::Serialize)] for SettingsContent
# 0.17.1: added plural
# 0.17.0: added declare_settings!, declare_env_settings_for_server!, env_settings!
# 0.16.0: added entry!
# 0.15.2: restored mysql!, pg!
# 0.15.1: pasitios!: added pasitos!(stop)
# 0.15.0: pasitios!: removed unnecessary Ret mention
# 0.14.0: pasitios!: removed unnecessary Arg mention
# 0.13.1: pasitios!: mod delay => mod demoras
# 0.13.0: pasitios!: demoras, !($paso push_back ..), $($paso push_front ..)
# 0.12.1: pasitios!: grupo => pasos
# 0.12.0: pasitios!: introduced mod pasos
# 0.11.0: improved pasitios!: introduced retrasos and demora instead of delay
# 0.10.0: improved pasitios!(@push) to solve delay issue after init
# 0.9.0: introduced env_settings instead of common_macros::config
# 0.8.0: introduced new syntax for pasitos! paso: paso NAME(Arg{...}) -> Ret {...} {...} => sync {..}
# 0.7.0: introduced pasitos! paso
# 0.6.0: introduced pasitos! grupo
# 0.5.0: op => pasitos
# 0.4.0 op: Run => Async, Process => Sync
# 0.3.0 introduced op::delay::QUEUE
# 0.2.0 removed Config from op!
# 0.1.0 forked from common_macros 0.21.0


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
