[package]
edition = "2021"
authors = ["Yury Bikuzin <yurybikuzin@yandex.ru>"]
name = "sekistov"
version = "0.1.0"
# 0.1.0 - initial

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


# https://docs.rs/built/0.7.5/built/index.html
build = "build.rs"

[build-dependencies]
built = "0.7"

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"]}
tokio = { workspace = true, features = ["full"] }
dotenv = { workspace = true }
clap = { workspace = true, features = ["derive"] }
common_macros = { workspace = true }
arrange_millis = { workspace = true }
paste = { workspace = true }
futures = { workspace = true }
op_mode = { workspace = true }
config = { workspace = true }
lazy_static = { workspace = true }
strum = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive", "rc"] }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
serde_yml = { workspace = true }
axum = { workspace = true, features = ["tracing", "macros", "multipart", "ws", "json" ] }
tower-http = { workspace = true, features = ["fs", "trace"] }
maud = { workspace = true, features = ["axum"] }
